# vampiregame

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-debug.bat  build-release.bat  vcpkg.json
.cursor/: global.mdc
.github/workflows/: ci.yml
docs/: README.md
scripts/: build.bat  run.bat
src/: main.cpp
src/engine/: Input.cpp  Input.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/game/: Game.cpp  Game.h
